# template_data_science

./: .coverage  .coveragec  .flake8  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
.github/workflows_legacy/: .yml
docs/: Makefile  conf.py  make.bat
docs/_build/doctrees/: commands.doctree  environment.pickle  getting-started.doctree  index.doctree
docs/_build/html/: .buildinfo  commands.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: main.py
src.egg-info/: PKG-INFO
tests/: test_main.py
tests/features/: test_main.py
