[tool.poetry]
name = "template_data_science"
version = "0.1.0"
description = "Data Science Template"
authors = ["Raphael Couronne <raphael.couronne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.18.1"
pandas = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.4.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

